feat: Added logic for adding and removing an author to a category.
